--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,3 @@
-Fabric==1.6.1
-Flask==0.10.1
-Frozen-Flask==0.11
-Jinja2==2.7
-Markdown==2.3.1
-MarkupSafe==0.18
-Werkzeug==0.9.1
-gunicorn==17.5
-itsdangerous==0.22
-paramiko==1.10.1
-pycrypto==2.6
-webassets==0.8
-wsgiref==0.1.2
+markdown
+PyYaml
 pystache
