--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 *.py[cod]
 
 .DS_Store
-env
+venv
 build
 *.swp
 *.swo
@@ -34,6 +34,7 @@ pip-log.txt
 .coverage
 .tox
 nosetests.xml
+htmlcov
 
 # Translations
 *.mo
