--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 title: Frozen Pie
 templates:
-  - post.mustache
-  - index.mustache
+  - post.html.mustache
+  - index.html.mustache
 
 styles:
   - index.css
