renamed to haml templates

--- a/config.github.yaml
+++ b/config.github.yaml
@@ -1,11 +1,12 @@
 title: Frozen Pie
 templates:
-  - post.haml.mustache
-  - index.html.mustache
+  - post.mustache.haml
+  - index.mustache.html
 
 styles:
   - index.css
-
+  - post.sass
+  
 scripts:
   - index.js
 
