--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 title: Frozen Pie
 templates:
-  - post.haml.mustache
-  - index.html.mustache
+  - post.mustache.haml
+  - index.mustache.html
 
 styles:
   - index.css
