--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,5 @@
 title: Frozen Pie
 github_repo: https://github.com/Facjure/frozen-pie
+content_dir: content
+templates_dir: templates
 relative_path: /index.html
