added support for default_template if no template is specified in content

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,12 @@
 # Develop
-content: content
+content: /Users/priyatam/Dev/projects/poems
 templates: templates
 styles: styles
 scripts: scripts
 lambdas: lambdas
+
+## System overrides
+default_template: post.mustache.haml
 
 # Deploy
 title: Frozen Pie
