html5 tags pages support

--- a/config.yaml
+++ b/config.yaml
@@ -9,6 +9,7 @@ lambdas: lambdas
 default_template: post.mustache
 
 # Deploy
+first_page : about.md
 title: Frozen Pie
 github_repo: https://github.com/Facjure/frozen-pie
 relative_path: /index.html
