--- a/config.github.yaml
+++ b/config.github.yaml
@@ -1,2 +1,16 @@
+# Develop
+content: content
+templates: recipe/templates
+styles: recipe/styles
+lambdas: recipe/lambdas
+scripts: lib
+
+## System overrides
+default_template: post.mustache
+
+# Deploy
+first_page : about.md
 title: Frozen Pie
+github_repo: https://github.com/Facjure/frozen-pie
+recipes_repo: https://github.com/Facjure/frozen-pie-recipes.git
 relative_path: /frozen-pie/
