--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 # Develop
 content: content
-templates: templates
-styles: styles
-scripts: scripts
-lambdas: lambdas
+templates: recipe/templates
+styles: recipe/styles
+lambdas: recipe/lambdas
+scripts: lib
 
 ## System overrides
 default_template: post.mustache
@@ -12,4 +12,5 @@ default_template: post.mustache
 first_page : about.md
 title: Frozen Pie
 github_repo: https://github.com/Facjure/frozen-pie
+recipes_repo: https://github.com/Facjure/frozen-pie-recipes.git
 relative_path: /index.html
