--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
 # Develop
 # no trailing /
-content: /Users/priyatam/Dev/github/facjure/resumaker/content
-templates: /Users/priyatam/Dev/github/facjure/resumaker/templates
-styles: /Users/priyatam/Dev/github/facjure/resumaker/styles
-lambdas: /Users/priyatam/Dev/github/facjure/resumaker/lambdas
+content: content
+templates: recipe/templates
+styles: recipe/styles
+lambdas: recipe/lambdas
 scripts: lib
 
 ## System overrides
