--- a/config.test.yaml
+++ b/config.test.yaml
@@ -10,8 +10,7 @@ scripts: lib
 default_template: post.mustache
 
 # Deploy
-first_page : about.md
+first_page : main.md
 title: Frozen Pie
 github_repo: https://github.com/Facjure/frozen-pie
 recipes_repo: https://github.com/Facjure/frozen-pie-recipes.git
-relative_path: /index.html
