--- a/config.github.yaml
+++ b/config.github.yaml
@@ -1,9 +1,5 @@
 # Develop
-content: content
-templates: recipe/templates
-styles: recipe/styles
-lambdas: recipe/lambdas
-scripts: lib
+recipe_root: recipe
 
 ## System overrides
 default_template: post.mustache
