added search_dirs for index.mustache rendering in bake.py made logging INFO only for new users removed typecheck in script.js

--- a/logging.yml
+++ b/logging.yml
@@ -15,7 +15,7 @@ handlers:
     maxBytes: 1024
 loggers:
   pielogger:
-    level: DEBUG
+    level: INFO
     handlers: [console, file]
     propagate: no
 root:
