added support for lambda rendering

--- a/config.yml
+++ b/config.yml
@@ -6,7 +6,7 @@ content: content
 default_template: post.mustache
 
 # Deploy
-first_page: blog
+first_page: page/introduction.md
 title: Frozen Pie
 github_repo: https://github.com/Facjure/frozen-pie
 recipes_repo: https://github.com/Facjure/frozen-pie-recipes.git
