--- a/literatte/logging.yml
+++ b/literatte/logging.yml
@@ -13,7 +13,7 @@ handlers:
   file:
     class : logging.handlers.RotatingFileHandler
     formatter: simple
-    filename: pie.log
+    filename: lit.log
     maxBytes: 1024
 loggers:
   nologger:
